flutter, gradle and powershell